--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ a {
   text-decoration: none;
 }
 .header {
+  z-index: 99999;
   position: sticky;
   top: 0;
   left: 0;
@@ -54,7 +55,6 @@ a {
 
 .description {
   padding: 2%;
-  /* width: 100%; */
 }
 
 #greetings {
@@ -72,7 +72,7 @@ a {
 }
 
 .projects {
-  /* display:flex; */
+  margin-bottom: 100px;
 }
 
 .header-text {
@@ -83,11 +83,68 @@ a {
   font-size: 40px;
 }
 
+.swiper-container {
+  position: relative;
+  width: 80%;
+  margin: 0 auto;
+}
+.swiper-container .swiper-button-prev {
+  left: -40px;
+}
+.swiper-container .swiper-button-next {
+  right: -40px;
+}
+
+.swiper-container .swiper-pagination {
+  bottom: -30px !important;
+}
+
 .card {
   background-color: #f4eee0;
-  width: 200px;
-  height: 200px;
-  border-radius: 4%;
+  padding: 5%;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 5%;
+  text-align: center;
+  font-family: "Dongle", sans-serif;
+}
+
+.card img {
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.card-name {
+  margin: 0;
+}
+
+.card-description {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 100;
+}
+
+.card-link {
+  text-decoration: none;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  width: 25%;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 30px;
+
+  text-align: center;
+
+  color: var(--text-color);
+  background-color: #393646;
 }
 
 .languages {
@@ -105,57 +162,6 @@ a {
   height: 40px;
   margin: auto;
   display: block;
-  /* width: 50%; */
-
-  /* align-self: center; */
-
-  /* filter: grayscale(); */
-}
-
-/* .language-img:hover{
-    filter: none;
-} */
-
-/* .swiper-wrapper {
-    height: 500px;
-} */
-.swiper-container {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-  height: 600px;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.swiper-slide {
-  width: 50%;
 }
 
 #contacth1 {
@@ -177,7 +183,6 @@ a {
 }
 
 #email-name {
-  /* width: 49%; */
   flex-grow: 1;
 }
 
@@ -212,6 +217,22 @@ a {
   .header {
     padding: 0 30px 0 30px;
   }
+
+  .card img {
+    object-fit: cover;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+  .swiper {
+    width: 100%;
+    height: 400px;
+  }
+  @media screen and (max-width: 640px) {
+    .swiper-slide {
+      max-width: 350px;
+    }
+  }
 }
 
 @media screen and (min-width: 769px) {
@@ -220,6 +241,7 @@ a {
     margin-right: auto;
     width: 50%;
   }
+
   .languages {
     padding: 0 50px 0 50px;
   }
@@ -229,10 +251,41 @@ a {
 }
 
 @media screen and (min-width: 1025px) {
+  .card img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .swiper {
+    width: 80%;
+    min-height: 450px;
+  }
+
+  @media screen and (max-width: 1200px) {
+    .card img {
+      width: 125px;
+      height: 125px;
+    }
+
+    .swiper {
+      width: 70%;
+      min-height: 450px;
+    }
+  }
+  @media screen and (max-width: 1800px) {
+    .card img {
+      width: 150px;
+      height: 150px;
+    }
+    .swiper {
+      width: 90%;
+      min-height: 450px;
+    }
+  }
+
   .email-form {
     margin-left: auto;
     margin-right: auto;
-    /* width: 50%; */
     width: 35vw;
   }
 
@@ -247,4 +300,10 @@ a {
   .language-img {
     height: 70px;
   }
+}
+
+.swiper-slide {
+  /* background-color: aliceblue; */
+  border-radius: 5%;
+  overflow: hidden;
 }
